# ai_course_study

./: .env  .gitignore  README.md  pyproject.toml
agent/: app.py  chat.py  llm_loop_tool.py
agent/openai_sdk/: joke_agent.py
basics/: conditions.py  list.py  list_set_tuple_dict.py  operator.py  test_str.py  tips.py
brochure/: brochure.py
direct_request/: direct_hit.py
gradio/: airline_gradio.py  broucher_gradio.py  chat_gardio.py  multi_modal_gradio.py  sample_llm_using_gradio.py
hugging_face/: language_translation.py  sentiment_analysis.py
scripts/: replace_in_files.py
self_talking_bot/: talking_bot.py
tokens/: token_test.py
web_scrapper/: web_scrapper.py  web_scrapper_ollama.py
