[project]
name = "python-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.4",
    "diffusers>=0.37.1",
    "gradio>=6.10.0",
    "huggingface-hub>=1.8.0",
    "ipython>=9.10.0",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "tiktoken>=0.11.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
]
